--- a/app/_locales/el/messages.json
+++ b/app/_locales/el/messages.json
@@ -195,10 +195,6 @@
   "addCustomToken": {
     "message": "Προσθήκη Προσαρμοσμένου Token"
   },
-  "addCustomTokenByContractAddress": {
-    "message": "Αδυναμία εύρεσης token; Μπορείτε να προσθέσετε χειροκίνητα οποιοδήποτε διακριτικό επικολλώντας τη διεύθυνσή του. Οι διευθύνσεις συμβολαίων Token μπορούν να βρεθούν στο $1.",
-    "description": "$1 is a blockchain explorer for a specific network, e.g. Etherscan for Ethereum"
-  },
   "addEthereumChainConfirmationDescription": {
     "message": "Αυτό θα επιτρέψει σε αυτό το δίκτυο να χρησιμοποιηθεί στο MetaMask."
   },
@@ -262,6 +258,10 @@
   },
   "addToken": {
     "message": "Προσθήκη Token"
+  },
+  "addTokenByContractAddress": {
+    "message": "Αδυναμία εύρεσης token; Μπορείτε να προσθέσετε χειροκίνητα οποιοδήποτε διακριτικό επικολλώντας τη διεύθυνσή του. Οι διευθύνσεις συμβολαίων Token μπορούν να βρεθούν στο $1",
+    "description": "$1 is a blockchain explorer for a specific network, e.g. Etherscan for Ethereum"
   },
   "address": {
     "message": "Διεύθυνση"
